# kanter_core

./: Cargo.toml  README.md  overview.dia  overview.dia~
data/: invert_graph.json
src/: dag.rs  edge.rs  engine.rs  error.rs  lib.rs  live_graph.rs  main.rs  node.rs  node_data.rs  node_graph.rs  priority.rs  process.rs  process_pack.rs  shared.rs  slot_data.rs  slot_image.rs  texture_processor.rs  transient_buffer.rs
src/node/: combine_rgba.rs  embed.rs  graph.rs  height_to_normal.rs  image.rs  input_gray.rs  input_rgba.rs  mix.rs  mod.rs  node_type.rs  output.rs  process_shared.rs  read.rs  separate_rgba.rs  value.rs  write.rs
tests/: integration_tests.rs
