[package]
name = "kanter_core"
version = "0.8.0"
authors = ["Lukas Orsvärn <lukas@orsvarn.com>"]
edition = "2018"

[dependencies]
image = "0.23"
nalgebra = "0.29"
num_cpus = "1.0"
rand = "0.8"
tempfile = "3.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
ntest = "0.7"
