[package]
name = "kanter_core"
version = "0.9.2"
authors = ["Lukas Orsvärn <lukas@orsvarn.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
image = "0.23"
nalgebra = "0.29"
num_cpus = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
ntest = "0.7"
